[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/audio/ui/godot_cozy_game_ui_hover.wav" type="AudioStream" id=1]
[ext_resource path="res://src/audio/ui/godot_cozy_game_ui_confirm.wav" type="AudioStream" id=2]
[ext_resource path="res://src/audio/ui/godot_cozy_game_ui_error.wav" type="AudioStream" id=3]
[ext_resource path="res://src/audio/ui/godot_cozy_game_ui_back.wav" type="AudioStream" id=4]
[ext_resource path="res://autoloads/AudioController.gd" type="Script" id=5]
[ext_resource path="res://src/audio/ambience/godot_cozy_game_ambience_trippy.wav" type="AudioStream" id=6]
[ext_resource path="res://src/audio/ambience/godot_cozy_game_ambience_danger.wav" type="AudioStream" id=7]
[ext_resource path="res://src/audio/ambience/godot_cozy_game_ambience_noise.wav" type="AudioStream" id=8]
[ext_resource path="res://src/audio/ambience/godot_cozy_game_ambience_flow.wav" type="AudioStream" id=9]
[ext_resource path="res://src/audio/ambience/godot_cozy_game_ambience_bubbly.wav" type="AudioStream" id=10]

[node name="Node" type="Node"]
script = ExtResource( 5 )

[node name="UIBack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
mix_target = 2
bus = "UI"

[node name="UIError" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
mix_target = 2
bus = "UI"

[node name="UIHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
mix_target = 2
bus = "UI"

[node name="UIConfirm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
mix_target = 2
bus = "UI"

[node name="AmbienceBubbly" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
bus = "Ambience"

[node name="AmbienceDanger" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "Ambience"

[node name="AmbienceFlow" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "Ambience"

[node name="AmbienceNoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "Ambience"

[node name="AmbienceTrippy" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Ambience"
